--- a/templates/blogs/myblogs.html
+++ b/templates/blogs/myblogs.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<div>
+    {% include 'messages.html' %}
+</div>
+
 <br>
 <h3 class="text-center">Your blogs : {{ count }}</h3>
 <br>
