--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,11 +22,11 @@
             {% csrf_token %}
             <div class="mb-3">
                 <label class="form-label">Username</label>
-                <input name="username" type="text" class="form-control">
+                <input name="username" type="text" class="form-control" required>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input name="password" type="password" class="form-control">
+                <input name="password" type="password" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-outline-primary">Login</button>
         </form>
