--- a/templates/blogs/addblog.html
+++ b/templates/blogs/addblog.html
@@ -15,11 +15,11 @@
         {% csrf_token %}
         <div class="mb-3">
             <label class="form-label">Title</label>
-            <input name="title" type="text" class="form-control" id="exampleInputPassword1">
+            <input name="title" type="text" class="form-control" id="exampleInputPassword1" required>
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Body</label>
-            <textarea name="body" class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+            <textarea name="body" class="form-control" id="exampleFormControlTextarea1" rows="6" required></textarea>
         </div>
         <br>
         <button type="submit" class="btn btn-outline-primary">post</button>
